--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "travis"
 version = "0.0.0"
 authors = ["softprops <d.tangren@gmail.com>"]
+description = "Travis v3 API interfaces"
+documentation = "https://softprops.github.io/travis"
+homepage = "https://github.com/softprops/travis"
+repository = "https://github.com/softprops/travis"
+keywords = ["travis", "api"]
+license = "MIT"
+readme = "README.md"
 
 [dependencies]
 futures = "0.1"
