--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "travis"
-version = "0.0.0"
+version = "0.1.0"
 authors = ["softprops <d.tangren@gmail.com>"]
 description = "Travis v3 API interfaces"
 documentation = "https://softprops.github.io/travis"
@@ -12,6 +12,7 @@ readme = "README.md"
 
 [dependencies]
 futures = "0.1"
+log = "0.3"
 hyper = "0.11"
 serde = "1.0.9"
 serde_derive = "1.0.9"
